resources/echo/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: echo-deployment
  labels:
    app: echo
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 1
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
        - "-text=echo"
        ports:
        - containerPort: 5678
          protocol: TCP
        resources:
          requests:
            cpu: 200m
