resources/echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  labels:
    app: echo
spec:
  ports:
  - port: 80
    targetPort: 5678
    protocol: TCP
    name: http
  selector:
    app: echo
